--- a/packages/pf-mention/src/wc/pf-mention-list-shadow.less
+++ b/packages/pf-mention/src/wc/pf-mention-list-shadow.less
@@ -23,7 +23,7 @@
 pf-mention-item {
   display: block;
 
-  &:not(:defined) {
+  &:not([defined]) {
     display: none;
   }
 }
@@ -36,7 +36,7 @@ pf-scrollable {
   padding: 0;
   margin: 0;
 
-  &:not(:defined) {
+  &:not([defined]) {
     display: none;
   }
 }
