refactor(): disabled button revisited Reefer to https://bitbucket.org/atlassian/atlaskit/pull-requests/171/basic-buttons-implemented-and-tested/activity#LC22373292T72

--- a/packages/ak-button/src/host.less
+++ b/packages/ak-button/src/host.less
@@ -1,9 +1,10 @@
 @import 'shared-variables.less';
 
+.ak-button,
 ak-button {
 
-  > _shadow_root_ {
-    display: block;
+  &[disabled] {
+    pointer-events: none;
   }
 
 }
