--- a/packages/ak-dropdown/src/shadow-trigger.less
+++ b/packages/ak-dropdown/src/shadow-trigger.less
@@ -1,20 +1,20 @@
 @import 'shared-variables.less';
 
 .trigger {
-  box-sizing:border-box;
-  color:@ak-color-N500;
-  padding:5px 40px 5px 10px;
-  cursor:pointer;
-  background:@ak-color-N20;
+  box-sizing: border-box;
+  color: @ak-color-N500;
+  padding: 5px 40px 5px 10px;
+  cursor: pointer;
+  background-color: @ak-color-N20;
   border-radius: @ak-dropdown-border-radius;
-  min-height:30px;
+  min-height: 30px;
 
   &:hover {
-    background:@ak-color-N40;
+    background-color: @ak-color-N40;
   }
 
   &:active {
-    background:@ak-color-N700;
+    background-color: @ak-color-N700;
     color:#fff;
   }
 
@@ -26,18 +26,18 @@
 
 .opened {
   &, &:active, &:hover {
-    background:@ak-color-N500;
-    border-bottom-left-radius:0;
-    border-bottom-right-radius:0;
-    color:#fff;
+    background-color: @ak-color-N500;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    color: #fff;
   }
 }
 
 .disabled {
   &, &:active, &:hover {
-    background:@ak-color-N900;
-    opacity:0.6;
-    color:@ak-color-N70;
-    cursor:not-allowed;
+    background-color: @ak-color-N900;
+    opacity: 0.6;
+    color: @ak-color-N70;
+    cursor: not-allowed;
   }
 }
