fix: some style changes

--- a/packages/ak-tag/src/shadow.less
+++ b/packages/ak-tag/src/shadow.less
@@ -7,12 +7,13 @@
 
 .chrome {
   border: 1px solid black;
-  padding: 0.2em;
+  padding: 4px;
   border-radius: 5%;
 }
 
+.href,
 .text {
-  color: red;
+  font-family: @ak-font-family;
 }
 
 .button {
