--- a/packages/ak-tag/src/shared-variables.less
+++ b/packages/ak-tag/src/shared-variables.less
@@ -1,5 +1,4 @@
 // For styles that are shared between shadow and host (variable definitions ONLY)
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
-
-@ak-example-variable: blue;
+@import '~akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/fonts.less';
