--- a/packages/ak-editor-popup/src/shared-variables.less
+++ b/packages/ak-editor-popup/src/shared-variables.less
@@ -1,6 +1,6 @@
 /* For styles that are shared between shadow and host (Variable definitions ONLY) */
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/colors.less';
 
 @ak-editor-popup-border-radius: 3px;
 @ak-editor-popup-box-shadow:0 3px 6px rgba(0, 0, 0, 0.2);
