--- a/packages/ak-editor-toolbar-hyperlink/src/shared-variables.less
+++ b/packages/ak-editor-toolbar-hyperlink/src/shared-variables.less
@@ -1,3 +1,3 @@
 // For styles that are shared between shadow and host (variable definitions ONLY)
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/colors.less';
