--- a/packages/ak-inline-dialog/src/shared-variables.less
+++ b/packages/ak-inline-dialog/src/shared-variables.less
@@ -1,6 +1,6 @@
 /* For styles that are shared between shadow and host (Variable definitions ONLY) */
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/colors.less';
 
 @ak-panel-bg-color: #fff;
 @ak-inline-dialog-border-color: @ak-color-N40; // This has not been confirmed by the ADG yet
