--- a/packages/pf-mention/src/shared-variables.less
+++ b/packages/pf-mention/src/shared-variables.less
@@ -1,4 +1,4 @@
 /* For styles that are shared between shadow and host (Variable definitions ONLY) */
 
-@import '../node_modules/akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/colors.less';
 
