refactor(typography): use new font family
affects: ak-navigation

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -57,15 +57,15 @@
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-    font-family: @ak-bold-font-family;
+    font-family: @ak-font-family;
+    font-weight: bold;
     font-size: 14px;
     padding: 0 20px;
   }
 
   .container-links {
-    font-family: @ak-medium-font-family;
+    font-family: @ak-font-family;
     font-size: 14px;
     padding: 0 20px;
   }
 }
-
