refactor(footer): better var names

--- a/packages/ak-editor-footer/src/shadow.less
+++ b/packages/ak-editor-footer/src/shadow.less
@@ -13,11 +13,11 @@
   //> ::slotted(*) { .childContent(); }
 }
 
-.left {
+.buttons {
   float: left;
 }
 
-.right {
+.tools {
   float: right;
 }
 
