feat: outlines & styling
affects: ak-tag

--- a/packages/ak-tag/src/host.less
+++ b/packages/ak-tag/src/host.less
@@ -11,7 +11,8 @@
 .ak-tag,
 ak-tag {
   display: inline-block;
-
+  margin-left: 6px;
+  margin-right: 6px;
   &:not([defined]) {
     display: none;
   }
