fix(style): do not add margin on first and last element
affects: ak-tag

--- a/packages/ak-tag/src/host.less
+++ b/packages/ak-tag/src/host.less
@@ -17,3 +17,11 @@ ak-tag {
     display: none;
   }
 }
+
+ak-tag:first-of-type {
+  margin-left: auto;
+}
+
+ak-tag:last-of-type {
+  margin-right: auto;
+}
