--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -82,4 +82,9 @@
       background: @ak-color-N700;
       color: @ak-color-N20
     }
+
+    &.compact {
+      height: @base*2.2;
+      line-height: @base*2.2;
+    }
   }
