--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -10,7 +10,7 @@
 @ak-editor-primary-button: #165ECC;
 
 /* Reds */
-@ak-color-R50: #FECECD;
+@ak-color-R50: #FFE1E4;
 @ak-color-R100: #FDAFAC;
 @ak-color-R200: #F48580;
 @ak-color-R300: #ED5451;
@@ -51,7 +51,7 @@
 
 /* Neutrals (Comments taken from https://extranet.atlassian.com/display/ADG/Harden+-+Color) */
 @ak-color-N10: #FAFBFC; /* Sub-background */
-@ak-color-N20: #ECEEF1; /* Primary color, default btns, rest dropdowns, navigation */
+@ak-color-N20: #F0F2F5; /* Primary color, default btns, rest dropdowns, navigation */
 @ak-color-N30: #E5E8EC; /* Hover btns */
 @ak-color-N40: #CFD4DB; /* Disabled btns, tabs line, forms, editor line, checkbox */
 @ak-color-N50: #C1C7D0; /* Nominated for removal from palette */
