--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -3,13 +3,10 @@
 .ak-inline-dialog, // for testing
 ak-inline-dialog {
   display:none;
-  opacity: 0;
+  //opacity: 0;
 
   &[open] {
     display:block;
-    &[positioned] {
-      opacity: 1;
-    }
   }
 }
 
