chore(component): Added classNames and set up basic story for animations
affects: akutil-shared-styles

--- a/packages/akutil-shared-styles/stories/stories.less
+++ b/packages/akutil-shared-styles/stories/stories.less
@@ -6,6 +6,12 @@
   display: inline-block;
 }
 
+.container {
+  margin: auto;
+  margin-top: 200px;
+  width: 500px;
+}
+
 .box {
   background-color: #0049B0;
   height: 100px;
@@ -16,4 +22,24 @@
   text-align: center;
   line-height: 100px;
   font-size: 20px;
+}
+
+.bold {
+  border-radius: 10px;
+}
+
+.optimistic {
+  border-radius: 100%;
+}
+
+.combined {
+  border-radius:35px;
+  transform: rotate(45deg);
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 55px;
+  padding-right: 50px;
 }
