--- a/packages/akutil-shared-styles/src/colors.less
+++ b/packages/akutil-shared-styles/src/colors.less
@@ -18,7 +18,7 @@
 @ak-color-R500: #BF2117;
 
 /* Yellows */
-@ak-color-Y50: #FFF2BF;
+@ak-color-Y50: #FFF6C9;
 @ak-color-Y100: #FFE580;
 @ak-color-Y200: #FFD740;
 @ak-color-Y300: #FFC400;
@@ -42,7 +42,7 @@
 @ak-color-B500: #1251AE;
 
 /* Purples */
-@ak-color-P50: #DEDCF2;
+@ak-color-P50: #E3E8F5;
 @ak-color-P100: #B6AFDB;
 @ak-color-P200: #8D86BF;
 @ak-color-P300: #6C64A6;
@@ -50,8 +50,8 @@
 @ak-color-P500: #3E3678;
 
 /* Neutrals (Comments taken from https://extranet.atlassian.com/display/ADG/Harden+-+Color) */
-@ak-color-N10: #FAFBFC; /* Sub-background */
-@ak-color-N20: #F0F2F5; /* Primary color, default btns, rest dropdowns, navigation */
+@ak-color-N10: #F7F8F9; /* Sub-background */
+@ak-color-N20: #ECEEF1; /* Primary color, default btns, rest dropdowns, navigation */
 @ak-color-N30: #E5E8EC; /* Hover btns */
 @ak-color-N40: #CFD4DB; /* Disabled btns, tabs line, forms, editor line, checkbox */
 @ak-color-N50: #C1C7D0; /* Nominated for removal from palette */
