fix(component): Tweak colors and styles
affects: ak-tabs

Fixes AK-186

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -10,9 +10,9 @@
 }
 
 .ak-tab-label {
-  color: #344563;
+  color: @ak-tabs-color-label-default;
   cursor: pointer;
-  font-size: 14px;
+  font-size: @ak-tabs-font-size;
   line-height: @ak-tabs-line-height;
   padding: @ak-tabs-padding-vertical @ak-tabs-padding-horizontal;
   position: relative;
