test(story): Added AnimatedBoxGroup and replaced animation story with it to handle doing three anima
affects: akutil-shared-styles

--- a/packages/akutil-shared-styles/stories/stories.less
+++ b/packages/akutil-shared-styles/stories/stories.less
@@ -33,6 +33,11 @@
   padding-right: 50px;
 }
 
+.center-content {
+  display: flex;
+  justify-content: center;
+}
+
 // The following three classes are only used to style the animated boxes
 // (bold, optimistic, combined)
 .bold {
