chore: attempting button group rounding fix

--- a/packages/ak-button-group/src/shadow.less
+++ b/packages/ak-button-group/src/shadow.less
@@ -4,50 +4,9 @@
 // Only do class selectors in here, anything else leaks to the rest of the page in
 // browsers that do not support shadow DOM
 @import 'shared-variables.less';
+@import "flexbox-mixin.less";
 @button-spacing: 4px;
 
-/* These are the two mixins that give the functiionality. One for named-slots one for default */
-.slot(@slotStyles; @childStyles) {
-    .default-slot-wrapper {
-        :host & {
-            @slotStyles();
-        }
-    }
-    .default-slot-element {
-        @slotStyles();
-        & > * {
-            @childStyles();
-        }
-    }
-    ::content > * {
-        @childStyles();
-    }
-    ::slotted(*) {
-        @childStyles();
-    }
-}
-
-.slot(@slotname; @slotStyles; @childStyles;) {
-    // native
-  	.@{slotname}-slot-wrapper {
-        :host & {
-            @slotStyles();
-        }
-    }
-    // polyfill
-    .@{slotname}-slot-element {
-        @slotStyles();
-        &[name=@{slotname}] > * {
-            @childStyles();
-        }
-    }
-    ::content > [slot=@{slotname}] {
-        @childStyles();
-    }
-    ::slotted([slot=@{slotname}]) {
-        @childStyles();
-    }
-}
 /* We simply define our styles like this. One variable for the styles applied to the slot and on for the children */
 @slotStyles: {
     display: inline-flex;
