--- a/packages/ak-button/src/shadow.less
+++ b/packages/ak-button/src/shadow.less
@@ -1,4 +1,4 @@
-@import '../node_modules/akutil-shared-styles/src/colors.less';
+@import '~akutil-shared-styles/src/colors.less';
 
 @base: 10px;
 @base-font: 14px;
