--- a/packages/akutil-shared-styles/src/animations.less
+++ b/packages/akutil-shared-styles/src/animations.less
@@ -1,5 +1,6 @@
 // Adding this dummy variable to get around an issue with less-vars-to-js no parsing files with noscript
 // variables. PR to fix it is here https://github.com/mjt01/less-vars-to-js/pull/3
+// TODO: remove this once the PR above is merged
 @dummyVar: 1;
 
 .boldAnimation(@animationClass; @name) {
