--- a/packages/ak-inline-dialog/src/host.less
+++ b/packages/ak-inline-dialog/src/host.less
@@ -1,9 +1,8 @@
 @import 'shared-variables.less';
 
-.ak-inline-dialog, // for testing
+.ak-inline-dialog, // only for use in storybook
 ak-inline-dialog {
   display:none;
-  //opacity: 0;
 
   &[open] {
     display:block;
