fix(component): Fixes for IE11
affects: ak-tabs

Fix usage of Array.from/spread operator and Map for IE11

--- a/packages/ak-tabs/src/shadow.less
+++ b/packages/ak-tabs/src/shadow.less
@@ -37,8 +37,9 @@
   }
 
   &.ak-tab-label-hidden {
-    visibility: hidden;
+    opacity: 0;
     position: absolute;
+    visibility: hidden;
   }
 
   &.ak-tab-label-single {
