feat: Fix various bugs in ak-editor-bitbucket, upgrade skatejs everywhere.
affects: ak-avatar, ak-badge, ak-blanket, ak-button, ak-dropdown, ak-editor-bitbucket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-footer, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-lists, ak-editor-toolbar-text-formatting, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-component-template, pf-mention

--- a/packages/ak-editor-bitbucket/src/shadow.less
+++ b/packages/ak-editor-bitbucket/src/shadow.less
@@ -2,4 +2,19 @@
 
 .root {
   display: block;
+  background: white;
+
+  [contenteditable] {
+    outline: none;
+    white-space: pre-wrap;
+  }
+}
+
+.content {
+  cursor: text;
+}
+
+.focused {
+  box-shadow: 0 0 0 2px @ak-editor-focus;
+  border-radius: 2px;
 }
