--- a/packages/ak-tabs/src/shared-variables.less
+++ b/packages/ak-tabs/src/shared-variables.less
@@ -5,12 +5,12 @@
 @ak-tabs-padding-vertical: 5px;
 @ak-tabs-padding-horizontal: 10px;
 @ak-tabs-margin: @ak-tabs-padding-horizontal / 2;
-@ak-tabs-color-label-default: #42526E; // N500
-@ak-tabs-color-line-default: #E5E8EC; // N30
-@ak-tabs-color-selected: #165ECC; // B400
-@ak-tabs-color-active: #0074E0; // B500
+@ak-tabs-color-label-default: @ak-color-N500;
+@ak-tabs-color-line-default: @ak-color-N30;
+@ak-tabs-color-selected: @ak-color-B400;
+@ak-tabs-color-active: @ak-color-B500;
 @ak-tabs-color-hover: @ak-tabs-color-selected;
-@ak-tabs-color-focus: #23A9FA;  // B100 - Focus outline
+@ak-tabs-color-focus: @ak-color-B100;
 @ak-tabs-focus-width: 2px;
 @ak-tabs-line-height: 25px;
 @ak-tabs-font-size: 14px;
