--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -28,16 +28,23 @@
     color: white;
     flex-direction: column;
     align-items: center;
+    position: relative;;
 
     .global-primary {
       margin: 25px auto;
-      width: 20px;
+      text-align: center;
     }
 
     .global-secondary {
       margin: 10px auto;
       height: 30px;
-      width: 20px;
+      text-align: center;
+    }
+
+    .global-bottom {
+      bottom: 0;
+      position: absolute;
+      width: 100%;
     }
   }
 
