--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -28,7 +28,7 @@
     color: white;
     flex-direction: column;
     align-items: center;
-    position: relative;;
+    position: relative;
 
     .global-primary {
       margin: 25px auto;
