feat(component): collapse state now shows the container navigation
affects: ak-navigation

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -5,25 +5,26 @@
 @ak-navigation-container-color: @ak-color-N20;
 @ak-navigation-container-name-color: @ak-color-N500;
 
+@global-bar-width: 60px;
+@global-primary-item-margin: 25px;
+@global-secondary-item-margin: 10px;
+@global-secondary-item-height: 30px;
+@container-logo-size: 40px;
+
 .navigation {
   background-color: @ak-navigation-container-color;
   top: 0;
   left: 0;
   position: fixed;
-  width: 80px;
   height: 100%;
   display: flex;
 
   &.should-animate {
-    transition: width 250ms;
-  }
-
-  &.open {
-    width: 300px;
+    transition: width 250ms, transform 250ms;
   }
 
   .global {
-    flex: 0 0 80px;
+    flex: 0 0 @global-bar-width;
     background-color: @ak-navigation-global-color;
     color: white;
     flex-direction: column;
@@ -31,13 +32,13 @@
     position: relative;
 
     .global-primary {
-      margin: 25px auto;
+      margin: @global-primary-item-margin auto;
       text-align: center;
     }
 
     .global-secondary {
       margin: 10px auto;
-      height: 30px;
+      height: @global-secondary-item-height;
       text-align: center;
     }
 
@@ -54,8 +55,8 @@
   }
 
   .container-logo {
-    width: 40px;
-    height: 40px;
+    width: @container-logo-size;
+    height: @container-logo-size;
     margin-right: 10px;
   }
 
@@ -67,12 +68,10 @@
     font-family: @ak-font-family;
     font-weight: bold;
     font-size: 14px;
-    padding: 0 20px;
   }
 
   .container-links {
     font-family: @ak-font-family;
     font-size: 14px;
-    padding: 0 20px;
   }
 }
