--- a/packages/ak-dropdown/src/shadow-trigger.less
+++ b/packages/ak-dropdown/src/shadow-trigger.less
@@ -3,11 +3,12 @@
 .trigger {
   box-sizing: border-box;
   color: @ak-color-N500;
-  padding: 5px 40px 5px 10px;
+  padding: 0 10px;
   cursor: pointer;
   background-color: @ak-color-N20;
   border-radius: @ak-dropdown-border-radius;
-  min-height: 30px;
+  height: 30px;
+  line-height: 30px;
 
   &:hover {
     background-color: @ak-color-N40;
