style(styles): remove unnecessary styles
affects: ak-dropdown

--- a/packages/ak-dropdown/src/shadow-item.less
+++ b/packages/ak-dropdown/src/shadow-item.less
@@ -10,9 +10,8 @@
   flex-wrap: nowrap;
 }
 
-.flex-item() {
-  flex: 1 100%;
-}
+// don't want to remove for now because of the mixing
+.flex-item() {}
 
 :host .item {
   .flex;
@@ -77,9 +76,6 @@
   border-bottom-right-radius: @ak-dropdown-border-radius;
 }
 
-.itemLeftPosition {
-  flex: 1;
-}
 .itemDefaultPosition {
   white-space: nowrap;
   overflow: hidden;
