fix(component): fix after broken tests
affects: ak-dropdown

--- a/packages/ak-dropdown/src/shadow-item.less
+++ b/packages/ak-dropdown/src/shadow-item.less
@@ -76,6 +76,10 @@
   border-bottom-right-radius: @ak-dropdown-border-radius;
 }
 
+.itemLeftPosition {
+  margin-right:10px;
+}
+
 .itemDefaultPosition {
   white-space: nowrap;
   overflow: hidden;
