--- a/packages/ak-navigation/src/ak-navigation-drawer.less
+++ b/packages/ak-navigation/src/ak-navigation-drawer.less
@@ -4,6 +4,7 @@
 @ak-navigation-selected-link-color: @ak-color-B500;
 
 .drawer {
+  transition: width, transform 220ms cubic-bezier(0.15, 1, 0.3, 1);
   position: absolute;
   top: 0;
   left: 60px; //TODO variable
@@ -12,8 +13,12 @@
   background: white;
   height: 100%;
   z-index: 1; //TODO move after container
+  box-shadow: 10px 0px 20px 0px rgba(0,0,0,0.15);
 
   &.open {
-    width: 300px;
+    width: 220px;
+    &.large {
+      width: 600px;
+    }
   }
 }
