refactor(component): polish the navigation drawers a bit more
affects: ak-navigation

--- a/packages/ak-navigation/src/ak-navigation-drawer.less
+++ b/packages/ak-navigation/src/ak-navigation-drawer.less
@@ -4,7 +4,7 @@
 @ak-navigation-selected-link-color: @ak-color-B500;
 
 .drawer {
-  transition: width, transform 220ms cubic-bezier(0.15, 1, 0.3, 1);
+  transition: width 220ms cubic-bezier(0.15, 1, 0.3, 1), padding 220ms;
   position: absolute;
   top: 0;
   left: 60px; //TODO variable
@@ -14,9 +14,11 @@
   height: 100%;
   z-index: 1; //TODO move after container
   box-shadow: 10px 0px 20px 0px rgba(0,0,0,0.15);
+  padding: 62px 0 0 0;
 
   &.open {
     width: 220px;
+    padding-left: 20px;
     &.large {
       width: 600px;
     }
