--- a/packages/ak-navigation/src/ak-navigation-drawer.less
+++ b/packages/ak-navigation/src/ak-navigation-drawer.less
@@ -1,19 +1,21 @@
 @import 'shared-variables.less';
+@import 'index.less';
 
 @ak-navigation-link-color: @ak-color-N500;
 @ak-navigation-selected-link-color: @ak-color-B500;
+
+@ak-navigation-drawer-box-shadow: 10px 0px 20px 0px rgba(0,0,0,0.15);
 
 .drawer {
   transition: width 220ms cubic-bezier(0.15, 1, 0.3, 1), padding 220ms;
   position: absolute;
   top: 0;
-  left: 60px; //TODO variable
+  left: @global-bar-width;
   width: 0;
   overflow: hidden;
   background: white;
   height: 100%;
-  z-index: 1; //TODO move after container
-  box-shadow: 10px 0px 20px 0px rgba(0,0,0,0.15);
+  box-shadow: @ak-navigation-drawer-box-shadow;
   padding: 62px 0 0 0;
 
   &.open {
