--- a/packages/ak-editor-footer/src/shadow.less
+++ b/packages/ak-editor-footer/src/shadow.less
@@ -12,6 +12,11 @@
   //> ::slotted(*) { .childContent(); }
 }
 
+.fake-input {
+  width: 100%;
+  display: block;
+}
+
 .footer {
   display: flex;
   align-items: center;
