--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -34,6 +34,10 @@
     .global-primary {
       margin: @global-primary-item-margin auto;
       text-align: center;
+
+      a {
+        color: currentColor;
+      }
     }
 
     .global-secondary {
