fix(component): it now handles the case where there's no logo or no name
affects: ak-navigation

--- a/packages/ak-navigation/src/index.less
+++ b/packages/ak-navigation/src/index.less
@@ -62,6 +62,10 @@
     width: @container-logo-size;
     height: @container-logo-size;
     margin-right: 10px;
+    
+    &:not([src]) {
+      visibility: hidden;
+    }
   }
 
   .container-name {
