refactor(component): Refactored LESS files so there are no stream comments in them
affects: ak-avatar, ak-button, ak-button-group, ak-editor-popup, ak-inline-dialog, ak-layer, ak-navigation, akutil-shared-styles, pf-mention

--- a/packages/ak-button-group/src/flexbox-mixin.less
+++ b/packages/ak-button-group/src/flexbox-mixin.less
@@ -1,4 +1,5 @@
-/* These are the two mixins that give the functiionality. One for named-slots one for default */
+// These are the two mixins that give the functiionality.
+// One for named-slots one for default
 .slot(@slotStyles; @childStyles) {
     .default-slot-wrapper {
         :host & {
