--- a/packages/ak-button-group/src/shadow.less
+++ b/packages/ak-button-group/src/shadow.less
@@ -7,7 +7,8 @@
 @import "flexbox-mixin.less";
 @button-spacing: 4px;
 
-/* We simply define our styles like this. One variable for the styles applied to the slot and on for the children */
+// We simply define our styles like this.
+// One variable for the styles applied to the slot and on for the children
 @slotStyles: {
     display: inline-flex;
     justify-content: space-between;
@@ -17,9 +18,7 @@
     margin: 0 @button-spacing/2;
 };
 
-/************************************/
-/************ Default slot **********/
-/************************************/
- // You can also call the default slot. Make sure your slot is wrapped by a div with the class
- // of .default-slot-wrapper and the slot has a class of .default-slot-element (And no name obviously)
+// DEFAULT SLOT
+// You can also call the default slot. Make sure your slot is wrapped by a div with the class
+// of .default-slot-wrapper and the slot has a class of .default-slot-element (And no name obviously)
 .slot(@slotStyles, @childStyles);
