--- a/packages/ak-navigation/src/ak-navigation-drawer.less
+++ b/packages/ak-navigation/src/ak-navigation-drawer.less
@@ -18,10 +18,8 @@
   box-shadow: @ak-navigation-drawer-box-shadow;
   padding: 62px 0 0 0;
 
-  /*
-    TODO: this can be removed if we change the order in the shadow DOM, but there's a bug with
-    having named slots after the default slot that makes this approach fail.
-  */
+  // TODO: this can be removed if we change the order in the shadow DOM, but there's a bug with
+  // having named slots after the default slot that makes this approach fail.
 
   z-index: 1;
 
